Added Sections / Headings / Body

--- a/CVTemplate.tex
+++ b/CVTemplate.tex
@@ -8,7 +8,14 @@
 
 \begin{document}
 	\renewcommand{\headrulewidth}{0pt} 
-	\drawHead{Ashay}{Sahare}{BE Information Technology Candidate}	
+	\drawHead{Ashay}{Sahare}{BE Information Technology Candidate}
+	
+	\begin{minipage}{0.33\textwidth}
+		\section{Personal Info}
+			\vspace{-20pt}\color{darkgrey}\rule{0.8\textwidth}{1pt}
+			\heading{Address}
+			
+	\end{minipage}	
 	
 
 \end{document}
