Personal Info Done

--- a/CVTemplate.tex
+++ b/CVTemplate.tex
@@ -12,9 +12,15 @@
 	
 	\begin{minipage}{0.33\textwidth}
 		\section{Personal Info}
-			\vspace{-20pt}\color{darkgrey}\rule{0.8\textwidth}{1pt}
+			\vspace{-20pt}\color{darkgrey}\rule{1.3\textwidth}{1pt}
 			\heading{Address}
-			
+			\body{4,'Swami' Mayane,Rambaug Colony,Kothrud,Pune}
+			\heading{Phone}
+			\body{(+91)965-703-1367}
+			\heading{Email}
+			\body{ashay.mailbox@gmail.com}
+			\heading{LinkedIn}
+			\body{www.linkedin.com/in/AshaySahare}
 	\end{minipage}	
 	
 
