Programming Section Done

--- a/CVTemplate.tex
+++ b/CVTemplate.tex
@@ -12,7 +12,7 @@
 	
 	\begin{minipage}{0.33\textwidth}
 		\section{Personal Info}
-			\vspace{-20pt}\color{darkgrey}\rule{1.3\textwidth}{1pt}
+			\secLine
 			\heading{Address}
 			\body{4,'Swami' Mayane,Rambaug Colony,Kothrud,Pune}
 			\heading{Phone}
@@ -21,6 +21,23 @@
 			\body{ashay.mailbox@gmail.com}
 			\heading{LinkedIn}
 			\body{www.linkedin.com/in/AshaySahare}
+			\heading{GitHub}
+			\body{www.github.com/xyAshay}
+			\secEnd
+			
+		\section{Programming}
+			\secLine
+			\heading{Over 3000 Lines}
+			\body{C \textbullet{} C++ \textbullet{} JavaScript \textbullet{} HTML \textbullet{} CSS}
+			\heading{Over 1000 Lines}
+			\body{Java \textbullet{} Python \textbullet{} NodeJS \textbullet{} GoLang}
+			\heading{Databases}
+			\body{MySQL \textbullet{} MongoDB \textbullet{} PostgreSQL}
+			\heading{Frameworks}
+			\body{ExpressJS \textbullet{} Vue \textbullet{} React}
+			\secEnd
+			
+		
 	\end{minipage}	
 	
 
