All Entries Done, Placholders To Be Replaced

--- a/CVTemplate.tex
+++ b/CVTemplate.tex
@@ -1,7 +1,7 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 %
-% Reppository :
+% Repository :
 % https://github.com/xyAshay/
 %
 % Author:
@@ -16,6 +16,7 @@
 	\renewcommand{\headrulewidth}{0pt} 
 	\drawHead{Ashay}{Sahare}{BE Information Technology Candidate}
 	\showUpdated
+	\drawObj{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec venenatis massa, volutpat pellentesque ipsum. Maecenas et lorem elementum eros gravida molestie. Morbi varius quam eros, sit amet pharetra dui vulputate ac. Cras fringilla nibh non enim ultrices, in iaculis. }
 	\drawFoot
 	
 	\begin{minipage}[t]{0.37\textwidth}
@@ -23,7 +24,7 @@
 			\secLine
 			\\[1pt]
 			\heading{\faMapMarker \hspace{5pt} Address}
-			\body{Kothrud, Pune, Maharashtra}
+			\body{Rambaug Colony, Kothrud \\ Pune, Maharashtra}
 			\heading{\faPhone \hspace{5pt} Phone}
 			\body{(+91)965-703-1367}
 			\heading{\faEnvelopeO \hspace{5pt} Email}
@@ -35,7 +36,7 @@
 			\href{https://www.github.com/xyAshay}{\hspace{-5pt}\body{www.github.com/xyAshay}}
 		\secEnd
 			
-		\section*{Programming}
+		\section*{Technical Skills}
 			\secLine
 			\heading{Over 3000 Lines}
 			\body{C \textbullet{} C++ \textbullet{} JavaScript \textbullet{} HTML \textbullet{} CSS}
@@ -58,9 +59,9 @@
 			
 		\section*{Misc}
 			\secLine
-			\body{\textbullet{} Problem Solving}\vspace{-5pt}
-			\body{\textbullet{} Critical Thinking}\vspace{-5pt}
-			\body{\textbullet{} Adaptibility}
+			\body{\textbullet{} Certificate 1 \\ Spannig NewLine}\vspace{-5pt}
+			\body{\textbullet{} Certificate 2 \\ Spanning NewLine}\vspace{-5pt}
+			\body{\textbullet{} Certificate 3}
 		\secEnd			
 	\end{minipage}
 	\hfill
@@ -90,7 +91,7 @@
 				\inHeading{Class\hspace{18pt}:}\inBody{12\textsuperscript{th}}\\
 				\inHeading{Board\hspace{15pt}:}\inBody{Maharashtra State Board}\\
 				\inHeading{Bifocal\hspace{11pt}:}\inBody{Computer Science}\\
-				\inHeading{GPA\hspace{24pt}:}\inBody{\hspace{2pt}7.69/10}
+				\inHeading{GPA\hspace{24pt}:}\inBody{\hspace{2pt}7.76/10}
 			\end{minipage}
 			%END ENTRY%
 			\begin{minipage}{0.25\textwidth}
@@ -135,10 +136,34 @@
 				\inHeading{Repository :}\href{https://www.github.com/xyAshay/sendOver}{\inBody{github.com/xyAshay/sendOver}}
 			\end{minipage}
 			%%END ENTRY
+			\begin{minipage}{0.25\textwidth}
+				\body{Sept 2019 - Dec 2019}
+			\end{minipage}
+			\hfill
+			\begin{minipage}{0.75\textwidth}
+				\vspace{15pt}
+				\heading{myBox}
+				\inHeading{Description :}\inBody{A Personal Web Server To Provice Cloud Storage Facilities To the User.}\\
+				\inHeading{Technologies Used :}\inBody{GoLang , Vue}\\
+				\inHeading{Repository :}\href{https://www.github.com/xyAshay/myBox}{\inBody{github.com/xyAshay/myBox}}
+			\end{minipage}
+			%%END ENTRY
+			\begin{minipage}{0.25\textwidth}
+				\body{Aug 2019 - Present}
+			\end{minipage}
+			\hfill
+			\begin{minipage}{0.75\textwidth}
+				\vspace{15pt}
+				\heading{BE Project}
+				\inHeading{Description :}\inBody{A Decentralized Voting System Using Blockchain.}\\
+				\inHeading{Technologies Used :}\inBody{Blockchain , JavaScript , Ethereum , HTML , CSS}\\
+				\inHeading{Repository :}\href{https://www.github.com/xyAshay/BEProject}{\inBody{github.com/xyAshay/BEProject}}
+			\end{minipage}
+			%%END ENTRY
 		\secEnd
-		%%ADD MORE INFO
+		%%ADD NEW SECTION
 		
-		%%END MORE INFO
+		%%END NEW SECTION
 	\end{minipage}
 	\hfill
 \end{document}
