--- a/CV.xyAshay.tex
+++ b/CV.xyAshay.tex
@@ -1,13 +1,13 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 %
-% Repository :
+% Github:
 % https://github.com/xyAshay/
 %
 % Author:
 % xyAshay
 
-\documentclass [a4paper]{myCV}
+\documentclass [a4paper]{CVStyling}
 
 \begin{document}
 	\pagestyle{fancy}
