--- a/CV.template.tex
+++ b/CV.template.tex
@@ -41,7 +41,7 @@
 			\heading{Subheading L2 1}
 			\body{Item 1 \textbullet{} Item 2 \textbullet{} Item 3 \textbullet{} Item 4}
 			\heading{Subheading L2 2}
-			\body{Item 1 \textbullet{} Item 2 \textbullet{} Item 3 \textbullet{} Item 4 \\ \textbullet{}Item 5 \textbullet{}Item 6 \textbullet{}Item 7}
+			\body{Item 1 \textbullet{} Item 2 \textbullet{} Item 3 \textbullet{} Item 4 \\ Item 5 \textbullet{}Item 6 \textbullet{}Item 7}
 			\heading{Subheading L2 3}
 			\body{Item 1 \textbullet{} Item 2 \textbullet{} Item 3}
 			\heading{Subheading L2 4}
